update endpoints img user and pets
