# src/controllers/pet_controller.go
@@ -13,6 +13,7 @@ func PetController(api fiber.Router) {
 	petsRoute.Get("/", services.GetAllPets)
 	petsRoute.Get("/:id", services.GetPetById)
 	petsRoute.Post("/", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin"}), services.CreatePet)
+	petsRoute.Patch("/:id/img", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin"}), services.UpdatePetImage)
 	petsRoute.Patch("/:id", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin"}), services.UpdatePet)
 	petsRoute.Delete("/:id", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin"}), services.DeletePet)
 	petsRoute.Get("/types", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin", "Adoptador"}), services.GetAllPetTypes)
