# src/controllers/user_controller.go
@@ -16,10 +16,10 @@ func UserController(api fiber.Router) {
 	usersRoute.Get("/", auth.AuthMiddleware([]string{"ONG", "Adoptador", "Duenio", "Admin"}), services.GetAllUsers)
 	usersRoute.Get("/self", auth.AuthMiddleware([]string{"ONG", "Adoptador", "Duenio", "Admin"}), services.GetSelfUser)
 	usersRoute.Get("/:id", auth.AuthMiddleware([]string{"ONG", "Adoptador", "Duenio", "Admin"}), services.GetUserById)
-	usersRoute.Patch("/", auth.AuthMiddleware([]string{"ONG", "Adoptador", "Duenio", "Admin"}), services.UpdateUserImage)
+	usersRoute.Patch("/img", auth.AuthMiddleware([]string{"ONG", "Adoptador", "Duenio", "Admin"}), services.UpdateUserImage)
 	usersRoute.Post("/recover", services.RecoverPassword)
 	usersRoute.Patch("/:id", auth.AuthMiddleware([]string{"Admin"}), services.UpdateUser)
 	usersRoute.Delete("/:id", auth.AuthMiddleware([]string{"Admin"}), services.DeleteUser)
-	// usersRoute.Patch("/", auth.AuthMiddleware([]string{"ONG", "Adoptador", "Duenio", "Admin"}), services.UpadteSelfUser)
+	usersRoute.Patch("/", auth.AuthMiddleware([]string{"ONG", "Adoptador", "Duenio", "Admin"}), services.UpadteSelfUser)
 	usersRoute.Delete("/", auth.AuthMiddleware([]string{"ONG", "Adoptador", "Duenio", "Admin"}), services.DeleteSelfUser)
 }
